# comparison-interface

./: .gitignore  .stylelintrc  LICENSE  README.md  accessibility_reporting_setup.js  app.py  eslint.config.mjs  jest.config.js  jest.reporting.config.js  package-lock.json  package.json  paper.bib  paper.md  pyproject.toml  requirements-server.txt  requirements-test.txt  requirements.txt  wsgi.py
.devcontainer/: Dockerfile  devcontainer.json  postCreateCommand.sh
.github/workflows/: accessibility.yml  linting.yml  testing.yml
comparison_interface/: __init__.py  api.py  cli.py  routes.py
comparison_interface/configuration/: csv_processor.py  csv_validation.py  example.flask.py  flask.py  schema.py  validation.py  website.py
comparison_interface/db/: connection.py  export.py  models.py  setup.py
comparison_interface/examples/: config-custom-item-weights.json  config-equal-item-weights-preference.json  config-equal-item-weights.json
comparison_interface/languages/: en.json
comparison_interface/templates/: 204.html  404.html  500.html  layout.html
comparison_interface/views/: ethics.py  introduction.py  item_preference.py  logout.py  policies.py  rank.py  register.py  request.py  thankyou.py
docs/: _config.yml  commands.md  configuration.md  export-data.md  index.md  installation.md  testing.md
jest_setup_files/: accessibility_reporting_setup.js  accessibility_testing_setup.js  jquery_setup.js  prepare_reporting_directory.js
tests_accessibility/: accessibility-item-select.test.js  accessibility.rank.test.js  accessibility.test.js
tests_javascript/: rank-control.test.js
tests_python/: conftest.py
tests_python/integration_tests/: test_api.py  test_db_setup.py  test_export.py  test_integration_views_item_preference.py  test_integration_views_rank.py  test_integration_views_registration.py  test_routing.py
tests_python/test_configurations/: config-custom-item-weights.json  config-equal-item-weights-2.json  config-equal-item-weights.json  config-larger.json
tests_python/unit_tests/: test_csv_processor.py  test_random_selection.py  test_schema_validation.py  test_unit_configuration_website.py  test_unit_views_rank.py  test_validation.py  (+2 more)
(+27 files in other folders)
