[project]
name = "Comparison-Interface"
version = "2.1.0"
description = "A web interface to facilitate the collection of comparative judgement data."
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "Flask>=3.1,<3.2",
    "SQLAlchemy>=2.0,<2.1",
    "Flask-SQLAlchemy>=3.1,<3.2",
    "marshmallow>=4.0,<4.1",
    "whitenoise",
    "pillow",
    "numpy",
    "cachetools",
]

[project.optional-dependencies]
lint = [
    "curlylint",
    "ruff",
]

test = [
    "coverage",
    "pytest",
    "pytest-mock",
    "pytest-cov",
]

server = [
    "uwsgi",
]

[tool.setuptools]
packages = []


[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "preserve"

[tool.ruff.lint]
select = [
    "F", # Pyflakes
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "I", # isort
    "D", # pydocstyle
]

ignore = ["D417", "D100", "D104"]


[tool.ruff.lint.per-file-ignores]
# ignore docstrings in test files (following pytest guidelines instead)
"tests_python/*" = ["D"]


[tool.ruff.lint.pydocstyle]
convention = "google"


# uncomment this to see logging in tests (useful for debugging)
# [tool.pytest.ini_options]
# log_cli = true
# log_cli_level = "INFO"
